# github-sdv-poc-msp-iot-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_install.cmake  package.xml
buildspec/: unit-test.yaml
include/iotb/: app.hpp  client_iot.hpp  context.hpp  fs.hpp
include/iotb/interface/: client_iot.hpp
iotb/: .clang-format  .cmake-format.yaml  CMakeLists.txt  package.xml
iotb/include/iotb/: app.hpp  client_iot.hpp  context.hpp
iotb/src/: app.cpp
logs/: logs.txt
src/: app.cpp
test/unit/: CMakeLists.txt  app.tst.cpp
